--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "cordova-admob-sdk": "^0.11.1",
-    "cordova-android": "^6.2.3",
+    "cordova-android": "6.4.0",
     "cordova-ios": "4.5.3",
     "cordova-plugin-admob-free": "^0.11.0",
     "cordova-plugin-device": "^1.1.6",
